Alternative test code for decrement table and financial calculations

--- a/Life Insurance/life_insurance_pricing_practice.ipynb
+++ b/Life Insurance/life_insurance_pricing_practice.ipynb
@@ -291,6 +291,69 @@
     "\n",
     "print(f\"After: Premium: ${current_premium:.2f}, Margin: {margin:.2%}, NPV: ${npv:,.2f}, PV Premiums: ${pv_prems:,.2f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa026949",
+   "metadata": {},
+   "source": [
+    "Test Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4a50da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term = 20\n",
+    "l0 = 1000\n",
+    "face_amount = 500000\n",
+    "gross_premium = 500  # Initial guess\n",
+    "interest_rate = 0.05\n",
+    "\n",
+    "# Load Tables (Simplified Vectors for Illustration)\n",
+    "# In reality, these would come from  (Mortality) and  (Lapse)\n",
+    "q_d_vector = np.linspace(0.00035, 0.00245, term) # Interpolated from VBT\n",
+    "w_vector = np.array([0.10, 0.08] + [0.05]*18)\n",
+    "\n",
+    "# --- Phase 1: The Demographic Engine (Vectorized) ---\n",
+    "# Note: Iteration is still needed for dependent path dependent variables\n",
+    "lives_start = np.zeros(term)\n",
+    "deaths = np.zeros(term)\n",
+    "lapses = np.zeros(term)\n",
+    "\n",
+    "current_lives = l0\n",
+    "for t in range(term):\n",
+    "    lives_start[t] = current_lives\n",
+    "\n",
+    "    # Decrement Logic: Deaths First\n",
+    "    d_t = current_lives * q_d_vector[t]\n",
+    "\n",
+    "    # Lapses Second (on survivors)\n",
+    "    w_t = (current_lives - d_t) * w_vector[t]\n",
+    "\n",
+    "    # Store\n",
+    "    deaths[t] = d_t\n",
+    "    lapses[t] = w_t\n",
+    "\n",
+    "    # Update\n",
+    "    current_lives = current_lives - d_t - w_t\n",
+    "\n",
+    "# --- Phase 2: Economic Engine ---\n",
+    "premiums = lives_start * gross_premium\n",
+    "claims = deaths * face_amount\n",
+    "\n",
+    "# Expenses\n",
+    "acq_expense = (l0 * 150) + premiums # Year 1 only\n",
+    "maint_expense = lives_start * 50\n",
+    "total_expense = np.zeros(term)\n",
+    "total_expense = acq_expense\n",
+    "total_expense[1:] = maint_expense[1:]\n",
+    "\n",
+    "print(f\"Total Expense: {total_expense}$\")"
+   ]
   }
  ],
  "metadata": {
